--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "lucide-react": "^0.563.0",
-    "qrcode.react": "^4.2.0",
-    "peerjs": "^1.5.5"
+    "lucide-react": "0.460.0",
+    "qrcode.react": "4.1.0",
+    "peerjs": "1.5.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
